[package]
name = "spr"
version = "0.1.0"
edition = "2021"

[lib]
name = "spr"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.10.0"
image = { version = "0.24", features = ["dds"] }
ddsfile = "0.5.1"
diva_db = { git = "https://github.com/diva-rust-modding/diva_db" }
pyo3 = { version = "0.18.1", features = ["extension-module", "abi3-py37"] }
texpresso = "2.0.1"
